// ERD Overview — 10 bảng chính
// Ground-truth: backend/data/migration.sql

Table users {
  id              int           [pk, increment]
  email           varchar(255)  [not null, unique]
  first_name      varchar(255)  [not null]
  last_name       varchar(255)  [not null]
  role            varchar(20)   [default: 'customer', note: "enum: 'customer','staff','admin'"]
  is_active       boolean       [default: true]
}

Table categories {
  id        int          [pk, increment]
  name_vi   varchar(100) [not null, unique]
  slug      varchar(255) [not null, unique]
  parent_id int          [note: 'self-ref — no FK constraint']
}

Table brands {
  id        int          [pk, increment]
  name_vi   varchar(100) [not null, unique]
  slug      varchar(255) [not null, unique]
}

Table products {
  id             int           [pk, increment]
  category_id    int
  brand_id       int
  name_vi        varchar(200)  [not null]
  base_price     decimal(15,2)
  status         varchar(20)   [default: 'active', note: "enum: 'active','inactive','draft','archived'"]
  stock_quantity int           [not null, default: 0]
}

Table product_variants {
  id             int           [pk, increment]
  product_id     int           [not null]
  sku            varchar(100)  [not null, unique]
  variant_name   varchar(255)  [not null]
  price          decimal(15,2)
  stock_quantity int           [default: 0]
  is_default     boolean       [default: false]
}

Table carts {
  id         int          [pk, increment]
  user_id    int
  session_id varchar(255)
  status     varchar(20)  [default: 'active', note: "enum: 'active','merged','converted','abandoned'"]
}

Table cart_items {
  id         int           [pk, increment]
  cart_id    int           [not null]
  product_id int           [not null]
  variant_id int
  quantity   int           [not null, default: 1]
  unit_price decimal(15,2) [not null]
}

Table orders {
  id               int           [pk, increment]
  number           varchar(50)   [not null, unique]
  user_id          int           [not null]
  status           varchar(20)   [default: 'pending', note: "enum: 'pending','processing','shipped','delivered','cancelled'"]
  payment_method   varchar(50)   [not null]
  payment_status   varchar(20)   [default: 'pending', note: "enum: 'pending','paid','failed','refunded'"]
  total            decimal(15,2) [not null]
}

Table order_items {
  id         int           [pk, increment]
  order_id   int           [not null]
  product_id int           [not null]
  variant_id int
  name       varchar(200)  [not null]
  unit_price decimal(15,2) [not null]
  quantity   int           [not null]
}

Table chat_messages {
  id           int          [pk, increment]
  user_id      int
  session_id   varchar(128) [not null]
  content      text         [not null]
  role         varchar(20)  [note: "enum: 'user','assistant'"]
  message_type varchar(20)  [not null, note: "enum: 'ai_chatbot','support_chat'"]
  intent       varchar(50)
  is_fallback  boolean      [not null, default: false]
}

Ref: products.category_id        > categories.id       [delete: set null]
Ref: products.brand_id           > brands.id           [delete: set null]
Ref: product_variants.product_id > products.id         [delete: cascade]
Ref: carts.user_id               > users.id            [delete: set null]
Ref: cart_items.cart_id          > carts.id            [delete: cascade]
Ref: cart_items.product_id       > products.id         [delete: no action]
Ref: cart_items.variant_id       > product_variants.id [delete: set null]
Ref: orders.user_id              > users.id            [delete: cascade]
Ref: order_items.order_id        > orders.id           [delete: cascade]
Ref: order_items.product_id      > products.id         [delete: no action]
Ref: order_items.variant_id      > product_variants.id [delete: set null]
Ref: chat_messages.user_id       > users.id            [delete: set null]
